--- a/App.glade
+++ b/App.glade
@@ -33,7 +33,7 @@ Author: Jackson de Oliveira
   <!-- interface-description Gerencia banco de dados SQLAnywhere -->
   <!-- interface-copyright 2019 -->
   <!-- interface-authors Jackson de Oliveira -->
-  <object class="GtkListStore" id="ls_banco">
+  <object class="GtkListStore" id="list_store">
     <columns>
       <!-- column-name # -->
       <column type="gboolean"/>
@@ -42,26 +42,16 @@ Author: Jackson de Oliveira
       <!-- column-name Nome -->
       <column type="gchararray"/>
     </columns>
-    <data>
-      <row>
-        <col id="0">False</col>
-        <col id="1" translatable="yes">/home/jackson/Dados</col>
-        <col id="2" translatable="yes">Contabil.db</col>
-      </row>
-      <row>
-        <col id="0">False</col>
-        <col id="1" translatable="yes"/>
-        <col id="2" translatable="yes"/>
-      </row>
-    </data>
   </object>
   <object class="GtkApplicationWindow" id="window_main">
     <property name="name">window_main</property>
     <property name="can_focus">False</property>
+    <property name="title" translatable="yes">Gerenciador de Banco Sybase</property>
     <property name="resizable">False</property>
     <property name="window_position">center</property>
     <property name="default_width">700</property>
     <property name="default_height">530</property>
+    <property name="icon">images/tux.png</property>
     <property name="gravity">center</property>
     <signal name="destroy" handler="on_window_main_destroy" swapped="no"/>
     <child type="titlebar">
@@ -85,7 +75,7 @@ Author: Jackson de Oliveira
           </object>
           <packing>
             <property name="x">554</property>
-            <property name="y">486</property>
+            <property name="y">485</property>
           </packing>
         </child>
         <child>
@@ -356,22 +346,24 @@ Author: Jackson de Oliveira
                 </child>
                 <child>
                   <object class="GtkScrolledWindow" id="scroll_param1">
-                    <property name="width_request">328</property>
-                    <property name="height_request">21</property>
+                    <property name="width_request">330</property>
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="kinetic_scrolling">False</property>
-                    <property name="overlay_scrolling">False</property>
                     <child>
-                      <object class="GtkTextView" id="txt_param_servidor">
-                        <property name="width_request">330</property>
-                        <property name="height_request">35</property>
+                      <object class="GtkViewport">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="tooltip_text" translatable="yes">Parâmetros adicionais do servidor.</property>
-                        <property name="margin_bottom">5</property>
-                        <property name="accepts_tab">False</property>
-                        <property name="input_hints">GTK_INPUT_HINT_LOWERCASE | GTK_INPUT_HINT_NONE</property>
+                        <property name="can_focus">False</property>
+                        <property name="margin_bottom">10</property>
+                        <property name="shadow_type">none</property>
+                        <child>
+                          <object class="GtkTextView">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="accepts_tab">False</property>
+                            <property name="input_hints">GTK_INPUT_HINT_NO_SPELLCHECK | GTK_INPUT_HINT_LOWERCASE | GTK_INPUT_HINT_NONE</property>
+                          </object>
+                        </child>
                       </object>
                     </child>
                   </object>
@@ -382,23 +374,23 @@ Author: Jackson de Oliveira
                 </child>
                 <child>
                   <object class="GtkScrolledWindow" id="scroll_param2">
-                    <property name="width_request">328</property>
-                    <property name="height_request">20</property>
+                    <property name="width_request">330</property>
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="valign">start</property>
+                    <property name="can_focus">False</property>
                     <property name="kinetic_scrolling">False</property>
-                    <property name="overlay_scrolling">False</property>
                     <child>
-                      <object class="GtkTextView" id="txt_param_tcp">
-                        <property name="width_request">330</property>
-                        <property name="height_request">35</property>
+                      <object class="GtkViewport">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="tooltip_text" translatable="yes">Parâmetros adcionais de rede.</property>
-                        <property name="margin_bottom">5</property>
-                        <property name="accepts_tab">False</property>
-                        <property name="input_hints">GTK_INPUT_HINT_LOWERCASE | GTK_INPUT_HINT_NONE</property>
+                        <property name="can_focus">False</property>
+                        <property name="margin_bottom">10</property>
+                        <child>
+                          <object class="GtkTextView">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="accepts_tab">False</property>
+                            <property name="input_hints">GTK_INPUT_HINT_NO_SPELLCHECK | GTK_INPUT_HINT_LOWERCASE | GTK_INPUT_HINT_NONE</property>
+                          </object>
+                        </child>
                       </object>
                     </child>
                   </object>
@@ -445,11 +437,11 @@ Author: Jackson de Oliveira
             <property name="can_focus">False</property>
             <property name="label_xalign">0</property>
             <child>
-              <object class="GtkTreeView" id="tv_banco_de_dados">
+              <object class="GtkTreeView" id="treeView">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="valign">start</property>
-                <property name="model">ls_banco</property>
+                <property name="model">list_store</property>
                 <property name="headers_clickable">False</property>
                 <property name="enable_search">False</property>
                 <property name="search_column">0</property>
@@ -457,45 +449,7 @@ Author: Jackson de Oliveira
                 <property name="enable_grid_lines">vertical</property>
                 <property name="enable_tree_lines">True</property>
                 <child internal-child="selection">
-                  <object class="GtkTreeSelection"/>
-                </child>
-                <child>
-                  <object class="GtkTreeViewColumn">
-                    <property name="title" translatable="yes">#</property>
-                    <child>
-                      <object class="GtkCellRendererToggle" id="cbox_db">
-                        <signal name="toggled" handler="on_cbox_db_toggled" swapped="no"/>
-                      </object>
-                      <attributes>
-                        <attribute name="activatable">2</attribute>
-                        <attribute name="active">2</attribute>
-                        <attribute name="radio">0</attribute>
-                      </attributes>
-                    </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkTreeViewColumn">
-                    <property name="fixed_width">385</property>
-                    <property name="title" translatable="yes">Caminho</property>
-                    <child>
-                      <object class="GtkCellRendererText" id="cl_caminho"/>
-                      <attributes>
-                        <attribute name="text">1</attribute>
-                      </attributes>
-                    </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkTreeViewColumn">
-                    <property name="title" translatable="yes">Nome</property>
-                    <child>
-                      <object class="GtkCellRendererText" id="cl_nome"/>
-                      <attributes>
-                        <attribute name="text">2</attribute>
-                      </attributes>
-                    </child>
-                  </object>
+                  <object class="GtkTreeSelection" id="selection"/>
                 </child>
               </object>
             </child>
