--- a/App.glade
+++ b/App.glade
@@ -43,7 +43,7 @@ Author: Jackson de Oliveira
       <column type="gchararray"/>
     </columns>
   </object>
-  <object class="GtkApplicationWindow" id="window_main">
+  <object class="GtkWindow" id="window_main">
     <property name="name">window_main</property>
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Gerenciador de Banco Sybase</property>
