--- a/App.glade
+++ b/App.glade
@@ -133,12 +133,13 @@ Author: Jackson de Oliveira
             <property name="can_focus">False</property>
             <property name="label_xalign">0</property>
             <child>
-              <object class="GtkFixed">
+              <object class="GtkBox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="halign">start</property>
-                <property name="valign">start</property>
-                <property name="margin_top">9</property>
+                <property name="margin_left">7</property>
+                <property name="margin_top">6</property>
+                <property name="margin_bottom">6</property>
+                <property name="spacing">6</property>
                 <child>
                   <object class="GtkButton" id="btn_iniciar">
                     <property name="label" translatable="yes">Iniciar</property>
@@ -148,8 +149,12 @@ Author: Jackson de Oliveira
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="tooltip_text" translatable="yes">Inicializa o banco da dados selecionado.</property>
-                    <property name="margin_left">10</property>
                   </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                  </packing>
                 </child>
                 <child>
                   <object class="GtkButton" id="btn_parar">
@@ -160,8 +165,12 @@ Author: Jackson de Oliveira
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="tooltip_text" translatable="yes">Para o banco da dados selecionado.</property>
-                    <property name="margin_left">84</property>
                   </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                  </packing>
                 </child>
               </object>
             </child>
