--- a/App.glade
+++ b/App.glade
@@ -44,17 +44,14 @@ Author: Jackson de Oliveira
     </columns>
   </object>
   <object class="GtkWindow" id="window_main">
-    <property name="name">window_main</property>
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">Gerenciador de Banco Sybase</property>
     <property name="resizable">False</property>
     <property name="window_position">center</property>
-    <property name="default_width">700</property>
-    <property name="default_height">530</property>
-    <property name="icon">images/tux.png</property>
-    <property name="gravity">center</property>
+    <property name="default_width">687</property>
+    <property name="default_height">555</property>
+    <property name="decorated">False</property>
     <signal name="destroy" handler="on_window_main_destroy" swapped="no"/>
-    <child type="titlebar">
+    <child>
       <placeholder/>
     </child>
     <child>
@@ -74,8 +71,8 @@ Author: Jackson de Oliveira
             <property name="tooltip_text" translatable="yes">Grava alterações.</property>
           </object>
           <packing>
-            <property name="x">554</property>
-            <property name="y">485</property>
+            <property name="x">540</property>
+            <property name="y">514</property>
           </packing>
         </child>
         <child>
@@ -90,40 +87,9 @@ Author: Jackson de Oliveira
             <signal name="clicked" handler="on_btn_fechar_clicked" swapped="no"/>
           </object>
           <packing>
-            <property name="x">622</property>
-            <property name="y">485</property>
+            <property name="x">607</property>
+            <property name="y">514</property>
           </packing>
-        </child>
-        <child>
-          <object class="GtkMenuBar" id="menu_main">
-            <property name="width_request">54</property>
-            <property name="height_request">29</property>
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <child>
-              <object class="GtkMenuItem">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Ajuda</property>
-                <property name="use_underline">True</property>
-                <child type="submenu">
-                  <object class="GtkMenu">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <child>
-                      <object class="GtkImageMenuItem">
-                        <property name="label">gtk-about</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-              </object>
-            </child>
-          </object>
         </child>
         <child>
           <object class="GtkFrame" id="frm_inicia_parar">
@@ -136,7 +102,7 @@ Author: Jackson de Oliveira
               <object class="GtkBox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">7</property>
+                <property name="margin_left">10</property>
                 <property name="margin_top">6</property>
                 <property name="margin_bottom">6</property>
                 <property name="spacing">6</property>
@@ -178,15 +144,13 @@ Author: Jackson de Oliveira
               <object class="GtkLabel" id="lbl_iniciar_parar">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">5</property>
-                <property name="margin_right">10</property>
                 <property name="label" translatable="yes"> Iniciar / Parar  </property>
               </object>
             </child>
           </object>
           <packing>
-            <property name="x">11</property>
-            <property name="y">417</property>
+            <property name="x">5</property>
+            <property name="y">442</property>
           </packing>
         </child>
         <child>
@@ -201,7 +165,7 @@ Author: Jackson de Oliveira
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="halign">start</property>
-                <property name="margin_left">6</property>
+                <property name="margin_left">10</property>
                 <property name="margin_top">3</property>
                 <property name="orientation">vertical</property>
                 <property name="spacing">4</property>
@@ -212,7 +176,6 @@ Author: Jackson de Oliveira
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
-                    <property name="active">True</property>
                     <property name="draw_indicator">True</property>
                     <property name="group">rbtn_desativado</property>
                   </object>
@@ -228,7 +191,6 @@ Author: Jackson de Oliveira
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
-                    <property name="active">True</property>
                     <property name="draw_indicator">True</property>
                     <property name="group">rbtn_automatico</property>
                   </object>
@@ -244,15 +206,13 @@ Author: Jackson de Oliveira
               <object class="GtkLabel" id="lbl_inicializacao">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">5</property>
-                <property name="margin_right">10</property>
                 <property name="label" translatable="yes">Inicialização</property>
               </object>
             </child>
           </object>
           <packing>
-            <property name="x">13</property>
-            <property name="y">216</property>
+            <property name="x">5</property>
+            <property name="y">235</property>
           </packing>
         </child>
         <child>
@@ -264,8 +224,8 @@ Author: Jackson de Oliveira
             <property name="label_xalign">0</property>
             <child>
               <object class="GtkFixed">
-                <property name="width_request">550</property>
-                <property name="height_request">143</property>
+                <property name="width_request">32</property>
+                <property name="height_request">32</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="halign">start</property>
@@ -357,7 +317,7 @@ Author: Jackson de Oliveira
                   <object class="GtkScrolledWindow" id="scroll_param1">
                     <property name="width_request">330</property>
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can_focus">True</property>
                     <property name="kinetic_scrolling">False</property>
                     <child>
                       <object class="GtkViewport">
@@ -385,7 +345,7 @@ Author: Jackson de Oliveira
                   <object class="GtkScrolledWindow" id="scroll_param2">
                     <property name="width_request">330</property>
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can_focus">True</property>
                     <property name="kinetic_scrolling">False</property>
                     <child>
                       <object class="GtkViewport">
@@ -414,15 +374,13 @@ Author: Jackson de Oliveira
               <object class="GtkLabel" id="lbl_parametros">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">5</property>
-                <property name="margin_right">10</property>
                 <property name="label" translatable="yes">Parâmetros</property>
               </object>
             </child>
           </object>
           <packing>
-            <property name="x">13</property>
-            <property name="y">36</property>
+            <property name="x">5</property>
+            <property name="y">54</property>
           </packing>
         </child>
         <child>
@@ -434,8 +392,8 @@ Author: Jackson de Oliveira
             <property name="pixbuf">images/tux.png</property>
           </object>
           <packing>
-            <property name="x">574</property>
-            <property name="y">46</property>
+            <property name="x">564</property>
+            <property name="y">77</property>
           </packing>
         </child>
         <child>
@@ -451,14 +409,13 @@ Author: Jackson de Oliveira
                 <property name="can_focus">True</property>
                 <property name="valign">start</property>
                 <property name="model">list_store</property>
-                <property name="headers_clickable">False</property>
                 <property name="enable_search">False</property>
                 <property name="search_column">0</property>
                 <property name="show_expanders">False</property>
                 <property name="enable_grid_lines">vertical</property>
                 <property name="enable_tree_lines">True</property>
                 <child internal-child="selection">
-                  <object class="GtkTreeSelection" id="selection"/>
+                  <object class="GtkTreeSelection"/>
                 </child>
               </object>
             </child>
@@ -466,21 +423,73 @@ Author: Jackson de Oliveira
               <object class="GtkLabel" id="lbl_banco_de_dados">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="margin_left">5</property>
-                <property name="margin_right">10</property>
                 <property name="label" translatable="yes">Banco de Dados</property>
               </object>
             </child>
           </object>
           <packing>
-            <property name="x">13</property>
-            <property name="y">305</property>
+            <property name="x">5</property>
+            <property name="y">326</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkHeaderBar">
+            <property name="width_request">687</property>
+            <property name="height_request">43</property>
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="title" translatable="yes">Gerenciador de Banco - Sybase</property>
+            <property name="show_close_button">True</property>
+            <child>
+              <object class="GtkMenuBar">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="halign">baseline</property>
+                <child>
+                  <object class="GtkMenuItem">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">Aj_uda</property>
+                    <property name="use_underline">True</property>
+                    <child type="submenu">
+                      <object class="GtkMenu">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <child>
+                          <object class="GtkImageMenuItem">
+                            <property name="label">gtk-about</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="use_underline">True</property>
+                            <property name="use_stock">True</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+              </object>
+            </child>
+          </object>
+        </child>
+        <child>
+          <object class="GtkButton">
+            <property name="label" translatable="yes">Excluir</property>
+            <property name="width_request">65</property>
+            <property name="height_request">34</property>
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="receives_default">True</property>
+          </object>
+          <packing>
+            <property name="x">607</property>
+            <property name="y">398</property>
           </packing>
         </child>
         <child>
           <object class="GtkButton" id="btn_file">
             <property name="label" translatable="yes">Incluir</property>
-            <property name="width_request">70</property>
+            <property name="width_request">65</property>
             <property name="height_request">34</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
@@ -488,8 +497,8 @@ Author: Jackson de Oliveira
             <signal name="clicked" handler="on_btn_file_clicked" swapped="no"/>
           </object>
           <packing>
-            <property name="x">533</property>
-            <property name="y">377</property>
+            <property name="x">535</property>
+            <property name="y">398</property>
           </packing>
         </child>
       </object>
