--- a/App.glade
+++ b/App.glade
@@ -51,7 +51,7 @@ Author: Jackson de Oliveira
     <property name="default_height">555</property>
     <property name="decorated">False</property>
     <signal name="destroy" handler="on_window_main_destroy" swapped="no"/>
-    <child>
+    <child type="titlebar">
       <placeholder/>
     </child>
     <child>
@@ -438,7 +438,8 @@ Author: Jackson de Oliveira
             <property name="height_request">43</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="title" translatable="yes">Gerenciador de Banco - Sybase</property>
+            <property name="title" translatable="yes">Gerenciador de Banco de Dados</property>
+            <property name="subtitle" translatable="yes">SQLAnywhere - Linux 64bit</property>
             <property name="show_close_button">True</property>
             <child>
               <object class="GtkMenuBar">
