--- a/App.glade
+++ b/App.glade
@@ -510,6 +510,8 @@ Author: Jackson de Oliveira
   </object>
   <object class="GtkAboutDialog" id="about_dialog">
     <property name="can_focus">False</property>
+    <property name="window_position">center</property>
+    <property name="hide_titlebar_when_maximized">True</property>
     <property name="type_hint">dialog</property>
     <property name="transient_for">window_main</property>
     <property name="program_name">Gerenciador de Banco de Dados - Sybase</property>
@@ -544,7 +546,7 @@ Twitter: @jkolive</property>
     <property name="wrap_license">True</property>
     <property name="license_type">custom</property>
     <signal name="response" handler="on_about_dialog_response" swapped="no"/>
-    <child>
+    <child type="titlebar">
       <placeholder/>
     </child>
     <child internal-child="vbox">
