--- a/App.glade
+++ b/App.glade
@@ -69,6 +69,7 @@ Author: Jackson de Oliveira
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
             <property name="tooltip_text" translatable="yes">Grava alterações.</property>
+            <signal name="clicked" handler="on_btn_gravar_clicked" swapped="no"/>
           </object>
           <packing>
             <property name="x">540</property>
@@ -285,7 +286,7 @@ Author: Jackson de Oliveira
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkEntry" id="txt_cache">
+                  <object class="GtkEntry" id="txt_mem_cache">
                     <property name="width_request">330</property>
                     <property name="height_request">30</property>
                     <property name="visible">True</property>
@@ -326,7 +327,7 @@ Author: Jackson de Oliveira
                         <property name="margin_bottom">10</property>
                         <property name="shadow_type">none</property>
                         <child>
-                          <object class="GtkTextView">
+                          <object class="GtkTextView" id="txt_param_rede">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="accepts_tab">False</property>
@@ -353,7 +354,7 @@ Author: Jackson de Oliveira
                         <property name="can_focus">False</property>
                         <property name="margin_bottom">10</property>
                         <child>
-                          <object class="GtkTextView">
+                          <object class="GtkTextView" id="txt_param_servidor">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="accepts_tab">False</property>
@@ -491,14 +492,14 @@ Author: Jackson de Oliveira
           </packing>
         </child>
         <child>
-          <object class="GtkButton" id="btn_file">
+          <object class="GtkButton" id="btn_incluir">
             <property name="label" translatable="yes">Incluir</property>
             <property name="width_request">65</property>
             <property name="height_request">34</property>
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
-            <signal name="clicked" handler="on_btn_file_clicked" swapped="no"/>
+            <signal name="clicked" handler="on_btn_incluir_clicked" swapped="no"/>
           </object>
           <packing>
             <property name="x">535</property>
