--- a/layout/Install.glade
+++ b/layout/Install.glade
@@ -10,6 +10,7 @@
     <property name="default_width">440</property>
     <property name="default_height">400</property>
     <signal name="destroy" handler="on_window_setup_destroy" swapped="no"/>
+    <signal name="focus-in-event" handler="on_window_install_focus_in_event" swapped="no"/>
     <child type="titlebar">
       <placeholder/>
     </child>
