--- a/layout/askPass.glade
+++ b/layout/askPass.glade
@@ -10,7 +10,7 @@
     <property name="window_position">center-always</property>
     <property name="default_width">300</property>
     <property name="default_height">200</property>
-    <signal name="destroy" handler="on_win_askpass_destroy" swapped="no"/>
+    <signal name="delete-event" handler="on_win_askpass_delete_event" swapped="no"/>
     <child>
       <placeholder/>
     </child>
