--- a/layout/app.glade
+++ b/layout/app.glade
@@ -299,7 +299,7 @@ Author: Jackson de Oliveira
                     <property name="margin_bottom">5</property>
                     <property name="max_length">30</property>
                     <property name="input_hints">GTK_INPUT_HINT_LOWERCASE | GTK_INPUT_HINT_NONE</property>
-                    <signal name="changed" handler="on_txt_mem_cache_changed" swapped="no"/>
+                    <signal name="key-release-event" handler="on_txt_mem_cache_key_release_event" swapped="no"/>
                   </object>
                   <packing>
                     <property name="x">220</property>
@@ -456,7 +456,7 @@ Author: Jackson de Oliveira
                   <object class="GtkMenuItem">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">Aj_uda</property>
+                    <property name="label" translatable="yes">Ajuda</property>
                     <property name="use_underline">True</property>
                     <child type="submenu">
                       <object class="GtkMenu">
