--- a/layout/app.glade
+++ b/layout/app.glade
@@ -51,7 +51,7 @@ Author: Jackson de Oliveira
     <property name="title" translatable="yes">Gerenciador de Banco de Dados - Sybase</property>
     <property name="resizable">False</property>
     <property name="window_position">center</property>
-    <property name="icon">../images/tux.png</property>
+    <property name="icon">../images/app-gerenciador.png</property>
     <signal name="delete-event" handler="on_window_main_delete_event" swapped="no"/>
     <child type="titlebar">
       <placeholder/>
@@ -395,7 +395,7 @@ Author: Jackson de Oliveira
             <property name="height_request">130</property>
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="pixbuf">../images/tux.png</property>
+            <property name="pixbuf">../images/app-gerenciador.png</property>
           </object>
           <packing>
             <property name="x">564</property>
@@ -550,7 +550,7 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.</property>
     <property name="authors">Jackson de Oliveira
 Twitter: @jkolive</property>
-    <property name="logo">../images/tux.png</property>
+    <property name="logo">../images/app-gerenciador.png</property>
     <property name="wrap_license">True</property>
     <property name="license_type">custom</property>
     <signal name="response" handler="on_about_dialog_response" swapped="no"/>
