--- a/layout/askPass.glade
+++ b/layout/askPass.glade
@@ -11,6 +11,7 @@
     <property name="default_width">300</property>
     <property name="default_height">200</property>
     <signal name="delete-event" handler="on_win_askpass_delete_event" swapped="no"/>
+    <signal name="destroy" handler="on_win_askpass_destroy" swapped="no"/>
     <child>
       <placeholder/>
     </child>
